# dbt-duckdb

./: pyproject.toml
