[tool.poetry]
name = "dbt-duckdb"
version = "0.1.0"
description = ""
authors = ["Arnaud Caldow <arnaud.caldow@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_duckdb"}]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "0.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
